# coursework_5

./: README.md  config.py  main.py  pyproject.toml
src/: class_db_manager.py  class_get_vacancies.py  utils.py
